--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -15,11 +15,16 @@ jobs:
         run: |
           wget https://github.com/gitleaks/gitleaks/releases/download/v8.18.2/gitleaks_8.18.2_linux_x64.tar.gz
           tar -xvzf gitleaks_8.18.2_linux_x64.tar.gz
-          chmod +x gitleaks_8.18.2_linux_x64
-          sudo mv gitleaks_8.18.2_linux_x64 /usr/local/bin/gitleaks
+          chmod +x gitleaks
+          sudo mv gitleaks /usr/local/bin/gitleaks
 
       - name: Run Gitleaks (Secret Scanning)
         run: gitleaks detect --source . --report-format json --report-path gitleaks-report.json
+
+      - name: Ensure Node is installed
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'
 
       - name: Install Snyk
         run: npm install -g snyk
@@ -35,3 +40,5 @@ jobs:
         with:
           name: scan-reports
           path: |
+            gitleaks-report.json
+            snyk-report.json
