--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -9,6 +9,12 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v3
 
+      - name: Set up Java
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+
       - name: Install Gitleaks
         run: |
           wget https://github.com/gitleaks/gitleaks/releases/download/v8.18.2/gitleaks_8.18.2_linux_x64.tar.gz
@@ -18,11 +24,6 @@ jobs:
 
       - name: Run Gitleaks (Secret Scanning)
         run: gitleaks detect --source . --report-format json --report-path gitleaks-report.json
-
-      - name: Ensure Node is installed
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18'
 
       - name: Install Snyk
         run: npm install -g snyk
