--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 HELP.md
 target/
+!.mvn/wrapper/
 !.mvn/wrapper/maven-wrapper.jar
+!.mvn/wrapper/maven-wrapper.properties
 !**/src/main/**/target/
 !**/src/test/**/target/
 
